# quant-agent-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  system_architecture.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_scanner_results_table.py  d88058d96fa0_add_tier_column_to_cached_analyses.py  e45197919585_add_cached_analyses_table.py
app/: config.py  dependencies.py  logging.py  main.py  scheduler.py
app/routes/: analysis.py  cached.py  discovery.py  scanner.py  sources.py  stream.py
app/scanner/: criteria.py  engine.py  greeks.py  market_data.py  rate_limiter.py  universe.py
data/: cache_repo.py  models.py  scanner_repo.py  sources.py
db/: models.py  session.py
graphs/discovery/: graph.py  schedule.py  state.py
graphs/free/: graph.py  state.py
graphs/orchestrator/: graph.py  state.py
graphs/shared/: compute_vol.py
graphs/trader/: graph.py  state.py
models/: common.py  events.py
sse/: bus.py
tests/: test_cache_repo.py  test_config.py  test_data_models.py  test_db_models.py  test_get_client_ip.py  test_get_rate_limiter.py  test_get_tier.py  test_logging.py  test_models.py  test_orchestrator_state.py  test_rate_limiter.py  test_schedule.py  test_scheduler_bleed.py  test_sources_adapter.py  test_trade_rec_parse.py  test_trader_state.py
tests/test_graphs/: test_discovery.py  test_orchestrator.py  test_trader.py
tests/test_nodes/: test_check_freshness.py  test_chunk_embed.py  test_crawl_cftc.py  test_crawl_earnings.py  (+10 more)
(+31 files in other folders)
